name:                growth
version:             0.1.0
description:         Play with culture growth and spread mechanics
category:            Games
license:             MIT
author:              Ben Foppa
maintainer:          benjamin.foppa@gmail.com
build-type:          Simple
cabal-version:       >= 1.9.2

executable growth
    hs-source-dirs: src/
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -rtsopts=all

    build-depends:
                    array,
                    base,
                    basic-prelude,
                    conduit == 1.1.*,
                    conduit-resumablesink == 0.1.* && >= 0.1.1.0,
                    deepseq,
                    game-wrappers == 0.5.* && >= 0.5.2,
                    hashable,
                    lens == 4.2.*,
                    open-union == 0.1.*,
                    QuickCheck >= 2,
                    transformers,
                    unordered-containers,
                    vector

test-suite tests
    type:           exitcode-stdio-1.0
    hs-source-dirs: test/
                    src/
    main-is:        Test.hs
    ghc-options:    -Wall -threaded -rtsopts=all -fno-warn-orphans -fno-warn-missing-signatures
    extensions:     TupleSections, GeneralizedNewtypeDeriving, TemplateHaskell, BangPatterns

    build-depends:
                    array,
                    HUnit,
                    QuickCheck >= 2,
                    test-framework-quickcheck2,
                    test-framework-hunit,
                    test-framework-th,
                    test-framework,
                    Cabal,
                    base
